test/data/syntax-errors/multiple-relationals.gs
givesUs ((1 < 2) || bless) 
